--- a/KriterisEdit/KriterisEdit.csproj
+++ b/KriterisEdit/KriterisEdit.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
       <PackageReference Include="System.Xml.XDocument" Version="4.3.0" />
     </ItemGroup>
 
