--- a/KriterisEdit/KriterisEdit.csproj
+++ b/KriterisEdit/KriterisEdit.csproj
@@ -8,7 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="3.7.0" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+      <PackageReference Include="System.ComponentModel.Composition" Version="4.7.0" />
       <PackageReference Include="System.Xml.XDocument" Version="4.3.0" />
     </ItemGroup>
 
