--- a/KriterisEdit/KriterisEdit.csproj
+++ b/KriterisEdit/KriterisEdit.csproj
@@ -12,6 +12,7 @@
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
       <PackageReference Include="System.ComponentModel.Composition" Version="4.7.0" />
       <PackageReference Include="System.Xml.XDocument" Version="4.3.0" />
+      <PackageReference Include="WpfPlus" Version="1.2.0" />
     </ItemGroup>
 
     <ItemGroup>
