add sdl+canvas cleared to blue

--- a/playground/rust/helloworld/cargo.toml
+++ b/playground/rust/helloworld/cargo.toml
@@ -1,3 +1,6 @@
 [package]
 name = "hello-world"
 version = "0.1.0"
+
+[dependencies]
+sdl2 = { version = "0.34.3", features = ["bundled", "static-link"] }
