add druid test to rust

--- a/playground/rust/helloworld/cargo.toml
+++ b/playground/rust/helloworld/cargo.toml
@@ -8,3 +8,5 @@ opt-level = 3
 [dependencies]
 sdl2 = { version = "0.34.3", features = ["bundled", "static-link"] }
 minifb = { version = "*" }
+fontdue = { version = "*" }
+druid = { version = "*" }
