--- a/KriterisEngine/KriterisEngine.csproj
+++ b/KriterisEngine/KriterisEngine.csproj
@@ -17,6 +17,8 @@
   </PropertyGroup>
  
   <ItemGroup>
+    <PackageReference Include="AdonisUI" Version="1.17.0" />
+    <PackageReference Include="AdonisUI.ClassicTheme" Version="1.17.0" />
     <PackageReference Include="CS-Script.Core" Version="1.4.0" />
     <PackageReference Include="Microsoft.DotNet.ILCompiler" Version="1.0.0-alpha-28515-01" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
