--- a/KriterisEngine/KriterisEngine.csproj
+++ b/KriterisEngine/KriterisEngine.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <PackageReference Include="AdonisUI" Version="1.17.0" />
     <PackageReference Include="AdonisUI.ClassicTheme" Version="1.17.0" />
+    <PackageReference Include="AnySerializer" Version="1.1.46" />
     <PackageReference Include="CS-Script.Core" Version="1.4.0" />
     <PackageReference Include="Microsoft.DotNet.ILCompiler" Version="1.0.0-alpha-28515-01" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
