--- a/playground/js/KriterisEngine/package.json
+++ b/playground/js/KriterisEngine/package.json
@@ -248,13 +248,17 @@
     "yarn-deduplicate": "^3.1.0"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
     "electron-updater": "^4.3.4",
     "history": "^5.0.0",
+    "keyboardjs": "^2.6.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
     "regenerator-runtime": "^0.13.5",
     "source-map-support": "^0.5.19"
   },
