--- a/playground/js/KriterisEngine/package.json
+++ b/playground/js/KriterisEngine/package.json
@@ -249,11 +249,13 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "clone-deep": "^4.0.1",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
     "electron-updater": "^4.3.4",
     "history": "^5.0.0",
     "keyboardjs": "^2.6.4",
+    "object-merge": "^2.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
