--- a/playground/js/KriterisEngine/tsconfig.json
+++ b/playground/js/KriterisEngine/tsconfig.json
@@ -11,8 +11,8 @@
     "pretty": true,
     "sourceMap": true,
     /* Additional Checks */
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     /* Module Resolution Options */
