--- a/playground/js/KriterisEngine/package.json
+++ b/playground/js/KriterisEngine/package.json
@@ -249,6 +249,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "clone-deep": "^4.0.1",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
