--- a/playground/js/KriterisEngine/package.json
+++ b/playground/js/KriterisEngine/package.json
@@ -251,10 +251,12 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "clone-deep": "^4.0.1",
+    "deep-object-diff": "^1.1.0",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
     "electron-updater": "^4.3.4",
     "history": "^5.0.0",
+    "javascript-stringify": "^2.0.1",
     "keyboardjs": "^2.6.4",
     "object-merge": "^2.5.1",
     "react": "^17.0.1",
@@ -296,10 +298,5 @@
     "baseBranches": [
       "next"
     ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   }
 }
