--- a/playground/js/KriterisEngine/package.json
+++ b/playground/js/KriterisEngine/package.json
@@ -289,7 +289,8 @@
         }
       }
     ],
-    "singleQuote": true
+    "singleQuote": true,
+    "semi": false
   },
   "renovate": {
     "extends": [
