--- a/playground/js/KriterisEngine/package.json
+++ b/playground/js/KriterisEngine/package.json
@@ -250,6 +250,10 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@types/clone-deep": "^4.0.1",
+    "@types/keyboardjs": "^2.5.0",
+    "@types/object-merge": "^2.5.0",
+    "@types/react-redux": "^7.1.16",
     "clone-deep": "^4.0.1",
     "deep-object-diff": "^1.1.0",
     "electron-debug": "^3.1.0",
