--- a/playground/js/KriterisEngine/package.json
+++ b/playground/js/KriterisEngine/package.json
@@ -184,6 +184,7 @@
     "@types/keyboardjs": "^2.5.0",
     "@types/node": "14.14.10",
     "@types/object-merge": "^2.5.0",
+    "@types/ramda": "^0.27.39",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.9",
     "@types/react-redux": "^7.1.16",
@@ -263,6 +264,7 @@
     "javascript-stringify": "^2.0.1",
     "keyboardjs": "^2.6.4",
     "object-merge": "^2.5.1",
+    "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
