--- a/playground/js/tinycrud-ts/client/package.json
+++ b/playground/js/tinycrud-ts/client/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.9"
+    "redux-devtools-extension": "^2.13.9",
+    "typescript": "^4.2.4"
   }
 }
