--- a/.gitignore
+++ b/.gitignore
@@ -353,3 +353,4 @@ MigrationBackup/
 .idea/
 /playground/js/tinycrud/client/dist/
 /playground/js/tinycrud-ts/client/dist/
+/playground/raspberry-pico/oxygen/.vscode/
