--- a/playground/cpp/KasseriEngine/KasseriEngine/KasseriEngine.vcxproj.filters
+++ b/playground/cpp/KasseriEngine/KasseriEngine/KasseriEngine.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="shader_utils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="experimental.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\ReadMe.txt" />
