--- a/playground/js/KriterisEngine/package.json
+++ b/playground/js/KriterisEngine/package.json
@@ -183,6 +183,7 @@
     "@types/history": "4.7.6",
     "@types/jest": "^26.0.15",
     "@types/keyboardjs": "^2.5.0",
+    "@types/lodash": "^4.14.170",
     "@types/node": "14.14.10",
     "@types/object-merge": "^2.5.0",
     "@types/ramda": "^0.27.39",
@@ -191,6 +192,7 @@
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.6",
     "@types/react-test-renderer": "^16.9.3",
+    "@types/uuid": "^8.3.0",
     "@types/webpack-env": "^1.15.2",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
@@ -244,6 +246,7 @@
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.0.3",
+    "ts-node": "^9.1.1",
     "typescript": "^4.0.5",
     "url-loader": "^4.1.0",
     "webpack": "^5.5.1",
@@ -264,6 +267,8 @@
     "history": "^5.0.0",
     "javascript-stringify": "^2.1.0",
     "keyboardjs": "^2.6.4",
+    "lodash": "^4.17.21",
+    "nedb": "^1.8.0",
     "object-merge": "^2.5.1",
     "ramda": "^0.27.1",
     "react": "^17.0.1",
@@ -272,7 +277,8 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "regenerator-runtime": "^0.13.5",
-    "source-map-support": "^0.5.19"
+    "source-map-support": "^0.5.19",
+    "uuid": "^8.3.2"
   },
   "devEngines": {
     "node": ">=10.x",
