--- a/playground/js/KriterisEngine/tsconfig.json
+++ b/playground/js/KriterisEngine/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "target": "ES2018",
+    "target": "ESNext",
     "module": "CommonJS",
-    "lib": ["dom", "esnext"],
+    "lib": ["dom","dom.iterable", "esnext"],
     "declaration": true,
     "declarationMap": true,
     "noEmit": true,
