--- a/playground/js/KriterisEngine/package.json
+++ b/playground/js/KriterisEngine/package.json
@@ -192,6 +192,7 @@
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.6",
     "@types/react-test-renderer": "^16.9.3",
+    "@types/three": "^0.129.1",
     "@types/uuid": "^8.3.0",
     "@types/webpack-env": "^1.15.2",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
@@ -278,6 +279,7 @@
     "redux": "^4.0.5",
     "regenerator-runtime": "^0.13.5",
     "source-map-support": "^0.5.19",
+    "three": "^0.129.0",
     "uuid": "^8.3.2"
   },
   "devEngines": {
