--- a/playground/js/KriterisEngine/package.json
+++ b/playground/js/KriterisEngine/package.json
@@ -278,6 +278,7 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "regenerator-runtime": "^0.13.5",
+    "rxjs": "^7.1.0",
     "source-map-support": "^0.5.19",
     "three": "^0.129.0",
     "uuid": "^8.3.2"
