--- a/playground/csharp/IndexerSourceGenerator/IndexerSourceGenerator/IndexerSourceGenerator.csproj
+++ b/playground/csharp/IndexerSourceGenerator/IndexerSourceGenerator/IndexerSourceGenerator.csproj
@@ -11,6 +11,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.10.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
