--- a/.gitignore
+++ b/.gitignore
@@ -354,3 +354,4 @@ MigrationBackup/
 /playground/js/tinycrud/client/dist/
 /playground/js/tinycrud-ts/client/dist/
 /playground/raspberry-pico/oxygen/.vscode/
+/playground/js/KriterisEngine2/dist/
