--- a/playground/js/KriterisEngine2/package.json
+++ b/playground/js/KriterisEngine2/package.json
@@ -12,7 +12,9 @@
   "devDependencies": {
     "@risingstack/react-easy-state": "^6.3.0",
     "axios": "^0.21.1",
+    "keyboardjs": "^2.6.4",
     "lodash": "^4.17.21",
+    "@material-ui/core": "^4.12.3",
     "parcel-bundler": "^1.12.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -20,8 +22,5 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "typescript": "^4.3.5"
-  },
-  "dependencies": {
-    "keyboardjs": "^2.6.4"
   }
 }
