--- a/.gitignore
+++ b/.gitignore
@@ -355,3 +355,4 @@ MigrationBackup/
 /playground/js/tinycrud-ts/client/dist/
 /playground/raspberry-pico/oxygen/.vscode/
 /playground/js/KriterisEngine2/dist/
+/playground/js/KriterisEngine3/dist/
