add example rest request after login

--- a/EasyAuthWpf/EasyAuthWpf.csproj
+++ b/EasyAuthWpf/EasyAuthWpf.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Net.Http" />
   </ItemGroup>
 
 </Project>
