add parcel2 boilerplate

--- a/.gitignore
+++ b/.gitignore
@@ -355,4 +355,9 @@ MigrationBackup/
 /playground/js/tinycrud-ts/client/dist/
 /playground/raspberry-pico/oxygen/.vscode/
 /playground/js/KriterisEngine2/dist/
+/stox/series/
 /playground/js/KriterisEngine3/dist/
+/playground/js/parcel2-client-server/client/.parcel-cache/
+/playground/js/parcel2-client-server/client/dist/
+/playground/python/untitled/build/
+/playground/python/untitled/dist/
