--- a/playground/js/parcel2-client-server/client/package.json
+++ b/playground/js/parcel2-client-server/client/package.json
@@ -23,7 +23,8 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "javascript-stringify": "^2.1.0"
+    "javascript-stringify": "^2.1.0",
+    "keyboardjs": "^2.6.4"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead"
 }
