--- a/playground/js/selfmodjs/client/package.json
+++ b/playground/js/selfmodjs/client/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@risingstack/react-easy-state": "^6.3.0",
     "axios": "^0.21.1",
+    "keyboardjs": "^2.6.4",
     "@material-ui/core": "^4.12.3",
     "parcel": "^2.0.1",
     "react": "^17.0.2",
