--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,5 @@ MigrationBackup/
 /playground/python/untitled/dist/
 /**/.parcel-cache/
 /playground/js/selfmodjs/client/dist/
+/playground/js/dock/dist/
+/playground/js/kreact/dist/
