--- a/playground/js/selfmodjs/client/package.json
+++ b/playground/js/selfmodjs/client/package.json
@@ -11,10 +11,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@material-ui/core": "^4.12.3",
     "@risingstack/react-easy-state": "^6.3.0",
     "axios": "^0.21.1",
+    "hyperactiv": "^0.10.1",
     "keyboardjs": "^2.6.4",
-    "@material-ui/core": "^4.12.3",
     "parcel": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -23,8 +24,6 @@
     "redux-devtools-extension": "^2.13.9",
     "typescript": "^4.2.4"
   },
-  "dependencies": {
-
-  },
+  "dependencies": {},
   "browserslist": "> 0.5%, last 2 versions, not dead"
 }
