--- a/playground/js/kreact/package.json
+++ b/playground/js/kreact/package.json
@@ -11,10 +11,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.17.2",
+    "@babel/plugin-transform-react-jsx": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
     "axios": "^0.21.1",
     "hyperactiv": "^0.10.1",
     "keyboardjs": "^2.6.4",
-    "parcel": "^2.3.0"
+    "parcel": "^2.3.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "dependencies": {},
   "browserslist": "> 0.5%, last 2 versions, not dead"
