--- a/playground/js/kreact/tsconfig.json
+++ b/playground/js/kreact/tsconfig.json
@@ -15,6 +15,11 @@
     "noEmit": true,
     "downlevelIteration": true,
     "noFallthroughCasesInSwitch": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "compilerOptions": {
+      "jsx": "react",
+      "jsxFactory": "jsxFactory",
+      "jsxFragmentFactory": "null"
+    }
   }
 }
