add eoddata processor (buckets by ticker symbol and injects company name)

--- a/stox/package.json
+++ b/stox/package.json
@@ -2,7 +2,7 @@
   "name": "stox",
   "version": "1.0.0",
   "dependencies": {
-
+    "papaparse": "^5.3.1"
   },
   "devDependencies": {
     "request": "^2.88.2",
