--- a/playground/js/kreact/package.json
+++ b/playground/js/kreact/package.json
@@ -12,8 +12,13 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.17.2",
+    "@babel/generator": "^7.17.3",
+    "@babel/parser": "^7.17.3",
     "@babel/plugin-transform-react-jsx": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@babel/traverse": "^7.17.3",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
     "axios": "^0.21.1",
     "hyperactiv": "^0.10.1",
     "keyboardjs": "^2.6.4",
@@ -21,6 +26,5 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
-  "dependencies": {},
   "browserslist": "> 0.5%, last 2 versions, not dead"
 }
