--- a/playground/js/kreact/package.json
+++ b/playground/js/kreact/package.json
@@ -17,14 +17,16 @@
     "@babel/plugin-transform-react-jsx": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@babel/traverse": "^7.17.3",
+    "@types/keyboardjs": "^2.5.0",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.21.1",
     "hyperactiv": "^0.10.1",
     "keyboardjs": "^2.6.4",
-    "parcel": "^2.3.0",
+    "parcel": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "ts-pattern": "latest"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead"
 }
