--- a/playground/js/kreact/package.json
+++ b/playground/js/kreact/package.json
@@ -25,8 +25,7 @@
     "keyboardjs": "^2.6.4",
     "parcel": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "ts-pattern": "latest"
+    "react-dom": "^17.0.2"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead"
 }
