--- a/playground/js/kreact/tsconfig.json
+++ b/playground/js/kreact/tsconfig.json
@@ -20,6 +20,7 @@
       "jsx": "react",
       "jsxFactory": "jsxFactory",
       "jsxFragmentFactory": "null"
-    }
+    },
+    "jsx": "react"
   }
 }
