--- a/playground/csharp/CoreWpfExample/CoreWpfExample.csproj
+++ b/playground/csharp/CoreWpfExample/CoreWpfExample.csproj
@@ -2,8 +2,15 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
+
+  <ItemGroup>
+    
+    <PackageReference Include="System.Drawing.Common" Version="7.0.0-preview.3.22175.4" />
+    
+    <PackageReference Include="WpfScreenHelper" Version="2.0.0" />
+  </ItemGroup>
 
 </Project>
