--- a/playground/js/kreact/package.json
+++ b/playground/js/kreact/package.json
@@ -24,8 +24,10 @@
     "hyperactiv": "^0.10.1",
     "keyboardjs": "^2.6.4",
     "parcel": "latest",
+    "process": "^0.11.10",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "ts-pattern": "^4.0.2"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead"
 }
