--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,4 @@ MigrationBackup/
 /playground/js/selfmodjs/client/dist/
 /playground/js/dock/dist/
 /playground/js/kreact/dist/
+/demos/js/drag-drop-html5/dist/
