--- a/demos/js/drag-drop-html5/package.json
+++ b/demos/js/drag-drop-html5/package.json
@@ -20,8 +20,10 @@
     "process": "^0.11.10",
     "react": "^17.0.2",
     "react-dnd": "^16.0.1",
+    "react-dnd-action": "^0.1.4",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "round-to": "^6.0.0"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "dependencies": {}
