--- a/playground/js/kreact-proxy/package.json
+++ b/playground/js/kreact-proxy/package.json
@@ -15,9 +15,11 @@
     "@babel/plugin-transform-react-jsx": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@types/keyboardjs": "^2.5.0",
+    "@types/lodash.clonedeep": "^4.5.7",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "keyboardjs": "^2.6.4",
+    "lodash.clonedeep": "^4.5.0",
     "parcel": "latest",
     "process": "^0.11.10",
     "react": "^17.0.2",
