--- a/playground/js/kreact-proxy/package.json
+++ b/playground/js/kreact-proxy/package.json
@@ -18,6 +18,12 @@
     "@types/lodash.clonedeep": "^4.5.7",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "babylonjs": "^5.21.0",
+    "babylonjs-gui": "^5.21.0",
+    "buffer": "^6.0.3",
+    "cellx": "^1.10.29",
+    "hyperactiv": "^0.11.2",
+    "javascript-stringify": "^2.1.0",
     "keyboardjs": "^2.6.4",
     "lodash.clonedeep": "^4.5.0",
     "parcel": "latest",
