--- a/playground/js/kreact/package.json
+++ b/playground/js/kreact/package.json
@@ -20,6 +20,7 @@
     "@types/keyboardjs": "^2.5.0",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "auto-memoize": "^1.0.14",
     "axios": "^0.21.1",
     "hyperactiv": "^0.10.1",
     "keyboardjs": "^2.6.4",
