--- a/playground/js/kreact-proxy/package.json
+++ b/playground/js/kreact-proxy/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.12.0",
     "@babel/plugin-transform-react-jsx": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@types/dom-to-image": "^2.6.4",
     "@types/keyboardjs": "^2.5.0",
     "@types/lodash.clonedeep": "^4.5.7",
     "@types/react": "^17.0.39",
@@ -23,6 +24,7 @@
     "buffer": "^6.0.3",
     "cellx": "^1.10.29",
     "cellx-collections": "^1.0.3",
+    "dom-to-image": "^2.6.0",
     "hyperactiv": "^0.11.2",
     "javascript-stringify": "^2.1.0",
     "keyboardjs": "^2.6.4",
