--- a/playground/js/kreact-proxy/package.json
+++ b/playground/js/kreact-proxy/package.json
@@ -19,6 +19,7 @@
     "@types/lodash.clonedeep": "^4.5.7",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/three": "^0.143.0",
     "babylonjs": "^5.21.0",
     "babylonjs-gui": "^5.21.0",
     "buffer": "^6.0.3",
@@ -33,7 +34,9 @@
     "process": "^0.11.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "the-dag": "^0.4.5"
+    "the-dag": "^0.4.5",
+    "three": "^0.145.0",
+    "vectorize-text": "^3.2.2"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead"
 }
