--- a/playground/js/kreact-proxy/package.json
+++ b/playground/js/kreact-proxy/package.json
@@ -36,6 +36,8 @@
     "react-dom": "^17.0.2",
     "the-dag": "^0.4.5",
     "three": "^0.145.0",
+    "three-fatline": "^0.5.3",
+    "three.interactive": "^1.4.0",
     "vectorize-text": "^3.2.2"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead"
