--- a/playground/js/kreact-proxy/package.json
+++ b/playground/js/kreact-proxy/package.json
@@ -28,6 +28,7 @@
     "dom-to-image": "^2.6.0",
     "hyperactiv": "^0.11.2",
     "javascript-stringify": "^2.1.0",
+    "jsondiffpatch": "^0.4.1",
     "keyboardjs": "^2.6.4",
     "lodash.clonedeep": "^4.5.0",
     "parcel": "latest",
