--- a/playground/js/kreact-proxy/package.json
+++ b/playground/js/kreact-proxy/package.json
@@ -19,6 +19,8 @@
     "@types/lodash.clonedeep": "^4.5.7",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/react-virtualized-auto-sizer": "^1.0.1",
+    "@types/react-window": "^1.8.5",
     "@types/three": "^0.143.0",
     "babylonjs": "^5.21.0",
     "babylonjs-gui": "^5.21.0",
@@ -36,6 +38,8 @@
     "process": "^0.11.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-virtualized-auto-sizer": "^1.0.7",
+    "react-window": "^1.8.8",
     "the-dag": "^0.4.5",
     "three": "^0.145.0",
     "three-fatline": "^0.5.3",
