--- a/playground/js/kreact-proxy/package.json
+++ b/playground/js/kreact-proxy/package.json
@@ -30,6 +30,7 @@
     "diff-dom": "^4.2.8",
     "dom-to-image": "^2.6.0",
     "hyperactiv": "^0.11.2",
+    "immutable": "^4.1.0",
     "javascript-stringify": "^2.1.0",
     "jsondiffpatch": "^0.4.1",
     "keyboardjs": "^2.6.4",
