--- a/playground/js/kreact-proxy/package.json
+++ b/playground/js/kreact-proxy/package.json
@@ -14,9 +14,13 @@
     "@babel/core": "^7.12.0",
     "@babel/plugin-transform-react-jsx": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@types/deep-equal": "^1.0.1",
     "@types/dom-to-image": "^2.6.4",
+    "@types/flat": "^5.0.2",
     "@types/keyboardjs": "^2.5.0",
     "@types/lodash.clonedeep": "^4.5.7",
+    "@types/pleasejs": "^0.0.30",
+    "@types/pubsub-js": "^1.8.3",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
@@ -27,20 +31,28 @@
     "buffer": "^6.0.3",
     "cellx": "^1.10.29",
     "cellx-collections": "^1.0.3",
+    "deep-equal": "^2.1.0",
     "diff-dom": "^4.2.8",
     "dom-to-image": "^2.6.0",
+    "flat": "^5.0.2",
+    "graphology": "^0.25.1",
+    "graphology-types": "^0.24.7",
     "hyperactiv": "^0.11.2",
     "immutable": "^4.1.0",
     "javascript-stringify": "^2.1.0",
     "jsondiffpatch": "^0.4.1",
     "keyboardjs": "^2.6.4",
     "lodash.clonedeep": "^4.5.0",
+    "os-browserify": "^0.3.0",
     "parcel": "latest",
+    "pleasejs": "^0.4.2",
     "process": "^0.11.10",
+    "pubsub-js": "^1.9.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-virtualized-auto-sizer": "^1.0.7",
     "react-window": "^1.8.8",
+    "sinuous": "^0.30.0",
     "the-dag": "^0.4.5",
     "three": "^0.145.0",
     "three-fatline": "^0.5.3",
@@ -48,5 +60,6 @@
     "tree-crawl": "^1.2.1",
     "vectorize-text": "^3.2.2"
   },
-  "browserslist": "> 0.5%, last 2 versions, not dead"
+  "browserslist": "> 0.5%, last 2 versions, not dead",
+  "dependencies": {}
 }
