--- a/playground/js/kreact-proxy/tsconfig.json
+++ b/playground/js/kreact-proxy/tsconfig.json
@@ -1,7 +1,13 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "lib": ["dom", "dom.iterable", "es2019", "es2020.promise"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "es2019",
+      "es2020.promise",
+      "es2021.weakref"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -21,6 +27,7 @@
       "jsxFactory": "jsxFactory",
       "jsxFragmentFactory": "null"
     },
+    "types": ["babylonjs","babylonjs-gui"],
     "jsx": "react"
   }
 }
