--- a/playground/js/easyui/package.json
+++ b/playground/js/easyui/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "jsspreadsheetdom",
+  "name": "easyui",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
     "dev": "npx live-server -q"
   },
